--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -1,6 +1,7 @@
 FROM postgres:17-alpine
 
 RUN apk add --no-cache timescaledb
+EXPOSE 5432
 
 # Install timescale db
-COPY ./create_timescaledb.sql /docker-entrypoint-initdb.d/
+COPY ./setup.sql /docker-entrypoint-initdb.d/
