--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ networks:
     driver: bridge
   db_network:
     driver: bridge
+  api_network:
+    driver: bridge
 
 services:
   rabbitmq:
@@ -31,7 +33,7 @@ services:
     hostname: "postgres"
     networks: ["db_network"]
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready"]
+      test: ["CMD", "pg_isready"]
       interval: 30s
       timeout: 30s
       retries: 3
@@ -92,11 +94,29 @@ services:
       api-gateway:
         condition: service_healthy
 
+  frontend:
+    build: ./frontend/
+    container_name: "frontend"
+    hostname: "frontend"
+    networks: ["api_network"]
+    healthcheck:
+      test: ["CMD-SHELL", "curl http://localhost:5173/"]
+      interval: 30s
+      timeout: 30s
+      retries: 3
+    ports:
+      - 5173:5173
+    volumes:
+      - ./frontend/public:/app/public
+      - ./frontend/.env:/app/.env
+      - ./frontend/src:/app/src
+      - ./frontend/index.html:/app/index.html
+
   api-gateway:
     build: ./api_gateway/
     container_name: "api-gateway"
     hostname: "gateway"
-    networks: ["rabbitmq_network"]
+    networks: ["rabbitmq_network", "api_network"]
     healthcheck:
       test: ["CMD-SHELL", "curl http://localhost:80/hello"]
       interval: 30s
