api gateway pipe data-transformation-service

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,13 @@
+# Config for Postgres
 POSTGRES_USER=
 POSTGRES_PASS=
+
+# Config for Mongo
 MONGO_USER=
 MONGO_PASS=
+
+# Services hosts / IPs
+DATA_TRANSFORMATION_SERVICE=http://data-transformation-service:3000
+
+# Generalized configs
+JWT_SECRET=
