integrate auth with api gateway

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ MONGO_PASS=
 
 # Services hosts / IPs
 DATA_TRANSFORMATION_SERVICE=http://data-transformation-service:3000
+AUTHENTICATION_SERVICE=http://authentication-service:3001
 
 # Generalized configs
 JWT_SECRET=
