--- a/authentication_service/.env.example
+++ b/authentication_service/.env.example
@@ -9,7 +9,7 @@ DB_PASSWORD=postgres_password
 DB_NAME=auth_db
 
 # Redis
-REDIS_URL=redis://localhost:6379
+REDIS_URL=redis://redis:6379
 
 # JWT
 ACCESS_TOKEN_SECRET=your_access_token_secret_here
