--- a/authentication_service/Dockerfile
+++ b/authentication_service/Dockerfile
@@ -1,4 +1,5 @@
 FROM node:22-alpine
+RUN apk add curl --no-cache
 
 WORKDIR /app
 COPY package*.json /app
@@ -6,5 +7,6 @@ RUN npm ci
 
 # Copy worktree
 COPY . .
+EXPOSE 3001
 CMD ["npm", "run", "start"]
 
