--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,13 @@ services:
     container_name: "redis"
     hostname: "redis"
     networks: ["db_network"]
+    ports:
+      - 6379:6379
+    healthcheck:
+      test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
 
   mongo:
     image: "mongo:8-noble"
@@ -89,6 +96,11 @@ services:
       retries: 10
     ports:
       - 3001:3001
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
 
   data-transformation-service:
     build: ./data_transformation_service/
@@ -136,6 +148,7 @@ services:
     environment:
       JWT_SECRET: ${JWT_SECRET}
       DATA_TRANSFORMATION_SERVICE: ${DATA_TRANSFORMATION_SERVICE}
+      AUTHENTICATION_SERVICE: ${AUTHENTICATION_SERVICE}
     healthcheck:
       test: ["CMD-SHELL", "curl http://localhost:80/health"]
       interval: 30s
