--- a/crawler_service/.env.example
+++ b/crawler_service/.env.example
@@ -1,2 +1,3 @@
 PORT=3003
-MONGO_URL=mongodb://mongo:27017/promptpal
+MONGO_URL=mongodb://user:pass@mongo:27017/promptpal
+RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
