--- a/crawler_service/package.json
+++ b/crawler_service/package.json
@@ -1,5 +1,6 @@
 {
 	"devDependencies": {
+		"@types/amqplib": "^0.10.7",
 		"@types/express": "^5.0.3",
 		"@types/node": "^24.3.0",
 		"tsx": "^4.20.5",
@@ -7,6 +8,7 @@
 	},
 	"dependencies": {
 		"@types/dotenv": "^6.1.1",
+		"amqplib": "^0.10.9",
 		"dotenv": "^17.2.2",
 		"express": "^5.1.0",
 		"puppeteer": "^24.18.0"
