--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,6 +90,26 @@ services:
     ports:
       - 27017:27017
 
+  sentiment-analysis-service:
+    build: ./sentiment_analysis_service/
+    container_name: "sentiment-analysis-service"
+    hostname: "sentiment-analysis-service"
+    networks: ["api_network", "db_network", "rabbitmq_network"]
+    healthcheck:
+      test: ["CMD-SHELL", "curl http://localhost:3004/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 10
+    ports:
+      - 3004:3004
+    volumes:
+      - ./sentiment_analysis_service/src:/app/src
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      mongo:
+        condition: service_healthy
+
   crawler-service:
     build: ./crawler_service/
     container_name: "crawler-service"
