--- a/sentiment_analysis_service/Dockerfile
+++ b/sentiment_analysis_service/Dockerfile
@@ -1,11 +1,12 @@
 FROM python:3.13-slim
 
 WORKDIR /app
-RUN apt install -y curl && curl -LsSf https://astral.sh/uv/install.sh | sh
+RUN apt-get update && apt-get install -y curl
+RUN pip install --no-cache-dir uv
 ENV PATH="/root/.cargo/bin:${PATH}"
 
 COPY requirements.txt ./
-RUN uv pip install -n -r requirements.txt
+RUN uv venv && uv pip install -n -r requirements.txt
 
 COPY . .
 
