put backtesting on :3002

--- a/api_gateway/.env.example
+++ b/api_gateway/.env.example
@@ -1,5 +1,6 @@
 JWT_SECRET=luny
 DATA_TRANSFORMATION_SERVICE=data-transformation-service:3000
 AUTHENTICATION_SERVICE=authentication-service:3001
+BACKTESTING_SERVICE=backtesting-service:3002
 CRAWLER_SERVICE=crawler-service
 SENTIMENT_ANALYSIS_SERVICE=sentiment-analysis-service:3004
