--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "lightweight-charts": "^5.0.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router": "^7.8.2",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
